@@ -3,7 +3,7 @@
 //
 
 #include "Stock_Consumer.h"
-#include <orbsvcs/CosNamingC.h>
+#include <orbsvcs/orbsvcs/CosNamingC.h>
 #include "ace/streams.h"
 
 int main (int argc, char* argv[])
